# Finst

./: .gitignore  CMakeLists.txt
dev/: main.cpp
include/: finst.hpp
